# cos-simd

./: Cargo.toml  README.md  main.rs
benches/: benchmarks.rs
cos_simd/: Cargo.toml
cos_simd/src/: lib.rs
